--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,3 +18,4 @@ jobs:
     - run: echo "IMAGE_TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
       if: startsWith(github.ref, 'refs/tags/v')
     - run: echo ${{ env.IMAGE_TAG }}
+    - run: echo ${{ github.ref_name }}
