--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       packages: write
     steps:
     - run: echo "IMAGE_TAG=dev" >> $GITHUB_ENV
-      if: ${{ github.ref_name }} == 'main'
+      if: github.ref_name == 'main'
     - run: echo "IMAGE_TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
       if: startsWith(github.ref, 'refs/tags/v')
     - run: echo ${{ env.IMAGE_TAG }}
