--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,9 @@ jobs:
     steps:
     - run: echo "IMAGE_TAG=dev" >> $GITHUB_ENV
       if: github.ref_name == 'main'
+    - run: echo "IMAGE_TAG=${github.ref_name}" >> $GITHUB_ENV
+      if: github.ref_name != 'main' && startsWith(github.ref, 'refs/heads/')
     - run: echo "IMAGE_TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
       if: startsWith(github.ref, 'refs/tags/v')
+    #
     - run: echo ${{ env.IMAGE_TAG }}
-    - run: echo ${{ github.ref_name }}
-    - run: echo ${{ github.ref }}
