--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,34 @@
 name: container-images
 
-
 on:
   push:
-    branches: [ "*" ]
+    branches: [ "main" ]
     tags: [ "v*" ]
 
 jobs:
-  test:
+  build-container-image:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     steps:
-    - run: echo "IMAGE_TAG=dev" >> $GITHUB_ENV
-      if: ${{ github.ref_name }} == 'main'
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - uses: docker/setup-qemu-action@v1
+    - uses: docker/setup-buildx-action@v1
+
+    - run: echo "IMAGE_TAG=latest" >> $GITHUB_ENV
+      if: github.ref_name == 'main'
     - run: echo "IMAGE_TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
       if: startsWith(github.ref, 'refs/tags/v')
-    - run: echo ${{ env.IMAGE_TAG }}
+
+    - name: Login to ghcr.io
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - run: |
+        ghcr.io/${{ github.repository }}:${{ env.IMAGE_TAG }}
